syntax = "proto3";

package ecco.math;

option php_generic_services = true;

service Calculator {
    rpc add (AddRequest) returns (AddReply) {}
    rpc substract(SubstractRequest) returns (SubstractReply) {}
}

message AddRequest {
    int32 x = 1;
    int32 y = 2;
}

message AddReply {
    int32 sum = 1;
}

message SubstractRequest {
    int32 x = 1;
    int32 y = 2;
}

message SubstractReply {
    int32 diff = 1;
}

